--- a/bitcoin-wallet-master/wallet/res/values/strings.xml
+++ b/bitcoin-wallet-master/wallet/res/values/strings.xml
@@ -349,5 +349,25 @@
     <string name="error_parse">Parse error: %s</string>
     <string name="error_http">HTTP error %1$s:\n%2$s</string>
     <string name="error_bluetooth">Bluetooth error: %1$s</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."</string>
+    <string name="hello">Hello World, LoginExamAct!</string>
+    <string name="app_name">LoginExam</string>
+    <string name="login">아이디:</string>
+    <string name="ok">검색</string>
+    <string name="cancel">저장</string>
+    <string name="pwd">비밀번호:</string>
+
 
 </resources>
