--- a/bitcoin-wallet-master/wallet/res/values-ko/strings.xml
+++ b/bitcoin-wallet-master/wallet/res/values-ko/strings.xml
@@ -242,9 +242,9 @@
   <string name="preferences_precision_summary">수량 표시 영역의 단위입니다. 산정되는 수치에는 영향을 미치지 않습니다.</string>
   <string name="preferences_precision_labels_8">BTC, 소수 8자리</string>
   <string name="preferences_precision_labels_6">BTC, 소수 6자리</string>
-  <string name="preferences_precision_labels_4">BTC, 소수 4자리</string>
+  <string name="preferences_precision_labels_4">, 소수 4자리</string>
   <string name="preferences_precision_labels_2_3">mBTC, 소수 2자리</string>
-  <string name="preferences_precision_labels_0_6">µBTC, 소수 표시안함</string>
+  <string name="preferences_precision_labels_0_6">블록체인상품권</string>
   <string name="preferences_own_name_title">소유자명</string>
   <string name="preferences_own_name_summary">결제요청에 추가될 당신의 이름입니다. 짧게 입력해주세요.</string>
   <string name="preferences_send_coins_autoclose_title">송금 대화창을 자동으로 닫기</string>
