--- a/bitcoin-wallet-master/wallet/res/values-ko/strings.xml
+++ b/bitcoin-wallet-master/wallet/res/values-ko/strings.xml
@@ -65,9 +65,9 @@
   <string name="send_coins_fragment_payee_verified_by">이 사용자에 의해 승인됨 : %s</string>
   <string name="send_coins_fragment_payee_verified_by_unknown">알려지지 않은 승인처</string>
   <string name="send_coins_fragment_receiving_address_label">받는 곳</string>
-  <string name="send_coins_fragment_receiving_address_hint">주소 또는 주소의 이름을 입력하세요</string>
+  <string name="send_coins_fragment_receiving_address_hint">주소 또는 받을 사람의 이름을 입력하세요</string>
   <string name="send_coins_fragment_receiving_address_error">유효하지 않은 BLOCK C 주소입니다.</string>
-  <string name="send_coins_fragment_receiving_address_own">당신 자신의 주소로 송금하려 하고 있습니다!</string>
+  <string name="send_coins_fragment_receiving_address_own">자신의 주소로 송금하려 하고 있습니다!</string>
   <string name="send_coins_fragment_receiving_address_complex">이해할 수 없는\n주소</string>
   <string name="send_coins_fragment_pending">(승인을 위해 기다는 중 : %s)</string>
   <string name="send_coins_fragment_amount_label">송금액</string>
