--- a/bitcoin-wallet-master/wallet/res/values-ko/strings.xml
+++ b/bitcoin-wallet-master/wallet/res/values-ko/strings.xml
@@ -12,9 +12,10 @@
   <string name="blockchain_state_progress_problem_storage">동기화 중 : 저장 공간 문제 발생</string>
   <string name="blockchain_state_progress_problem_network">동기화 중 : 네트워크에 문제 발생</string>
   <string name="wallet_address_fragment_clipboard_msg">BLOCK C 주소가 클립보드에 복사되었습니다</string>
-  <string name="wallet_address_dialog_fragment_hint">당신의 비밀을 보호하기 위해 송금내역을 받은 후에 당신의 주소가 변경될 것입니다.</string>
+  <string name="wallet_address_dialog_fragment_hint">보안을 위해 상품권을 받은 후에 지갑 주소가 변경될 것입니다.</string>
   <string name="wallet_balance_fragment_insecure_device">현재 사용하는 장치 기기가 아주 오래되었거나 안전하지 않습니다. BLOCK C의 안전한 거래를 위해 작은 양만 사용하는 것이 좋습니다.</string>
-  <string name="wallet_balance_fragment_too_much">이 금액은 전자지갑에 보관하기에 너무 큰 금액입니다. 데스크탑 지갑으로 옮기거나 비밀키를 별도로 보관하세요.</string>
+  <string name="wallet_balance_fragment_too_much"></string>
+  <!--<string name="wallet_balance_fragment_too_much">이 금액은 전자지갑에 보관하기에 너무 큰 금액입니다. 데스크탑 지갑으로 옮기거나 비밀키를 별도로 보관하세요.</string>-->
   <string name="wallet_balance_fragment_replaying">블럭체인 초기화 중, 잔액을 사용할 수 없습니다.</string>
   <string name="exchange_rates_activity_title">환율 목록</string>
   <string name="exchange_rates_fragment_empty_text">환율 정보를 불러오지 못했습니다.</string>
@@ -28,7 +29,7 @@
   <string name="wallet_transactions_fragment_empty_text_received">상품권 결제 내역이 없습니다.</string>
   <string name="wallet_transactions_fragment_empty_text_sent">아직 BLOCK C를 보낸 내역이 없습니다.</string>
   <!--<string name="wallet_transactions_fragment_empty_text_howto">BLOCK C 획득 방법\n\n1. 로컬 통화로 BLOCK C 구매\n2. 상품이나 서비스 판매\n3. 용역 대가로 획득</string>-->
-  <string name="wallet_transactions_fragment_empty_text_howto">Block C 상품권 구매 방법 </string>
+  <string name="wallet_transactions_fragment_empty_text_howto"> </string>
   <string name="wallet_transactions_row_warning_backup">첫거래를 축하드립니다. 분실에 대비하기 위해 &lt;u&gt;BLOCK C 지갑 백업&lt;/u&gt;이 가능합니다. </string>
   <!--<string name="wallet_transactions_row_warning_backup">축하드립니다. 첫번째 결제를 받았습니다. 분실에 대비하기 위해 &lt;u&gt;전자 지갑 백업&lt;/u&gt;을 수행하신 적이 있나요? </string>-->
   <string name="wallet_transactions_row_warning_storage_encryption">힌트: 지갑의 안전을 위해 &lt;u&gt;기기 암호화&lt;u&gt;를 사용해 보세요. 이것은 다른 앱의 자료도 보호해 줍니다.</string>
@@ -37,8 +38,8 @@
   <string name="wallet_transactions_fragment_internal">내부 처리 금액</string>
   <string name="wallet_transactions_options_filter">필터</string>
   <string name="wallet_transactions_options_filter_all">모든 거래내역</string>
-  <string name="wallet_transactions_options_filter_received">수신 내역</string>
-  <string name="wallet_transactions_options_filter_sent">송금 내역</string>
+  <string name="wallet_transactions_options_filter_received">상품권 수신 내역</string>
+  <string name="wallet_transactions_options_filter_sent">상품권 송금 내역</string>
   <string name="wallet_options_safety_menu">안전 보관</string>
   <string name="wallet_options_encrypt_keys_set">송금 PIN 설정</string>
   <string name="wallet_options_encrypt_keys_change">송금 PIN 변경</string>
@@ -72,7 +73,8 @@
   <string name="send_coins_fragment_pending">(승인을 위해 기다는 중 : %s)</string>
   <string name="send_coins_fragment_amount_label">송금액</string>
   <string name="send_coins_fragment_hint_fee_economic">경제적 수수료 설정으로 %s가 수수료로 지불됩니다. 위험: BLOCK C 거래 시 네트워크를 통해 승인이 되어야 거래가 완료됩니다. 낮은 수수료 설정 시 승인에 오랜 시간이 걸릴 수 있습니다.</string>
-  <string name="send_coins_fragment_hint_fee">네트워크 승인을 위해 %s가 지불됩니다.</string>
+  <string name="send_coins_fragment_hint_fee">1,000원 단위로 상품권을 보낼 수 있습니다.</string>
+  <!--<string name="send_coins_fragment_hint_fee">네트워크 승인을 위해 %s가 지불됩니다.</string>-->
   <string name="send_coins_fragment_hint_fee_priority">급행 수수료 설정으로 %s가 수수료로 지불됩니다.  네트워크 상에서 빠른 승인을 원한다면, 급행 수수료로 설정하시기 바랍니다.</string>
   <string name="send_coins_fragment_hint_dusty_send">송금액이 너무 적어 전송 할 수 없습니다.</string>
   <string name="send_coins_fragment_hint_insufficient_money">보유하고 있는 금액이 %s 부족합니다.</string>
@@ -128,14 +130,14 @@
   <string name="maintenance_dialog_state_decrypting">복호화중...</string>
   <string name="maintenance_dialog_state_done">완료.</string>
   <string name="maintenance_dialog_button_move">옮기기</string>
-  <string name="request_coins_activity_title">BLOCK C 요청</string>
+  <string name="request_coins_activity_title">BLOCK C 상품권 요청</string>
   <string name="request_coins_fragment_amount_label">요청 금액 (선택 사항)</string>
   <string name="request_coins_fragment_accept_bluetooth_payment">결제 과정에서의 신뢰성 강화를 위해 블루투스를 통해 승인합니다.</string>
-  <string name="request_coins_fragment_initiate_request_qr">BLOCK C 송금자에게 이 QR 코드를 읽게 하세요.</string>
+  <string name="request_coins_fragment_initiate_request_qr">BLOCK C 상품권 송금자에게 이 QR 코드를 읽게 하세요.</string>
   <string name="request_coins_fragment_initiate_request_nfc">또는 주변에 NFC 지원 장치가 있다면 이 기기를 대주세요.</string>
-  <string name="request_coins_clipboard_msg">BLOCK C 전송 요청이 클립보드에 복사되었습니다</string>
-  <string name="request_coins_share_dialog_title">BLOCK C 송금요청 공유</string>
-  <string name="request_coins_no_local_app_msg">BLOCK C 송금요청을 위한 또 다른 BLOCK C wallet 앱이 설치되어 있지 않습니다.</string>
+  <string name="request_coins_clipboard_msg">BLOCK C 상품권 전송 요청이 클립보드에 복사되었습니다</string>
+  <string name="request_coins_share_dialog_title">BLOCK C 상품권 송금요청 공유</string>
+  <string name="request_coins_no_local_app_msg">BLOCK C 상품권 송금 요청을 위한 또 다른 BLOCK C wallet 앱이 설치되어 있지 않습니다.</string>
   <string name="request_coins_options_local_app_title">설치된 앱에서 내 주소로 송금</string>
   <string name="address_book_activity_title">주소록</string>
   <string name="address_book_list_receiving_title">내 BLOCK C 주소</string>
@@ -322,9 +324,9 @@
   <string name="button_share">공유</string>
   <string name="button_set_as_default">기본값으로 설정</string>
   <!--<string name="button_request_coins">BLOCK C 송금요청</string>-->
-  <string name="button_request_coins">Block C 전송 요청</string>
+  <string name="button_request_coins">Block C 상품권 전송 요청</string>
   <!--<string name="button_send_coins">송금하기</string>-->
-  <string name="button_send_coins">Block C 보내기</string>
+  <string name="button_send_coins">Block C 상품권보내기</string>
   <string name="button_scan">QR 읽기</string>
   <string name="button_settings">설정</string>
   <string name="action_show_qr">QR코드 보기</string>
